<resources>
    <string name="app_name">ExpensesApp</string>


    <string name="welcome">Welcome! Please enter your name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="intro"> Hi! </string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="see_econ">Overview</string>
    <string name="list_view">View Accounts</string>

    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="category">Category</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>

    <string-array name="income_category">
        <item>Salary</item>
        <item>Others</item>
    </string-array>

    <string-array name="expenses_category">
        <item>Groceries</item>
        <item>Rent</item>
        <item>Travel</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>

    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expenses</string>
    <string name="total_both">Total</string>
    <string name="from_date">From Date: </string>
    <string name="to_date">To Date: </string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
